--- a/index.html
+++ b/index.html
@@ -8,27 +8,11 @@
   <title>3D Model Loader </title>
 </head>
 <body>
-
-  <!-- <div class="frame">
-    <div id="result">
-      <canvas class="webgl"></canvas>
-      </div> -->
-          <!-- AVATAR -->
-        <!-- CONTEINER GERAL -->
-      <div class="frame">
-        <div id="result">
-          <div class="rounded-xl card-bg not-hoverable home-card--mobile lg:home-card--desktop 2xl:home-card--desktop-large lg:overflow-hidden relative pt-4 md:pt-0 z-0">
-                    <!-- ACESSANDO -->
-              <div class="lg:absolute w-full h-full">
-                <!-- POSIÇÃO DO AVATAR -->
-                <!-- NAME AVATAR -->
-                  <div class="main-avatar-preview cursor-grab         
-                  active:cursor-grabbing"style="position: relative; width: 150%; height: 100%; overflow: hidden; left: -20%;">
-                  <!-- CUSTOMIZAÇÃO DO CANVAS -->
-                    <canvas class ="webgl" style="display: block; width: 1609px; height: 500px; touch-action: none;" width="1609" height="500"></canvas>
-              </div>
-            </div>
-  </div>       
+  <div id="container">
+    <div id="info">
+      <canvas class ="webgl"></canvas>
+    </div>
+  </div>
   <script type="module" src ="index.js"></script>
 </body>
 </html>
