--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
   <title>3D Model Loader </title>
 </head>
 <body>
-  <div id="container">
-    <div id="info"><canvas class ="webgl"></canvas>
+    <div id="container"><canvas class ="webgl"></canvas>
     </div>
   </div>
         <script type="module" src ="index.js"></script>
